--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <script type="text/javascript">
 // Popup window code
 function newPopup1(url) {
-       popupWindow = window.open(url,'popUpWindow1','height=300,width=300,left=800,top=10,resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no,status=yes')
+       popupWindow = window.open(url,'popUpWindow1','height=100%,width=80%,right=0,top=0,resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no,status=yes')
 }
 
 function newPopup2(url) {
-       popupWindow = window.open(url,'popUpWindow2','height=300,width=300,left=400,top=10,resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no,status=yes')
+       popupWindow = window.open(url,'popUpWindow2','height=100%,width=20%,left=0,top=0,resizable=yes,scrollbars=yes,toolbar=yes,menubar=no,location=no,directories=no,status=yes')
 }
 
 
@@ -14,4 +14,5 @@ function newPopup2(url) {
 <body>
      <a href="JavaScript:newPopup1('https://www.vmixcall.com');">google</a>
      <a href="JavaScript:newPopup2('http://94.75.123.182:8875/tablet.html?pages=1');">bscav</a>
+     <a href="JavaScript:newPopup2('http://94.75.123.182:8875/tablet.html?pages=1');JavaScript:newPopup1('https://www.vmixcall.com');">Kliknij Tutaj</a>
 </body>
